# streviz

./: .gitignore  README.md  index.html  package.json  tailwind-test-output.css  tailwind.config.ts  vite.config.ts
components/media/: responsive-media-library.tsx
components/streams/: responsive-stream-card.tsx
components/ui/: touch-optimized.tsx
docs/: README.md  code-standards.md  codebase-summary.md  design-guidelines.md  project-overview-pdr.md  responsive-design-system.md  system-architecture.md
hooks/: use-touch-gestures.ts
src/: App.tsx  styles-old.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: ffprobe-aarch64-apple-darwin  mediamtx-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cache/: mod.rs  normalize.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/gpu/: mod.rs  nvenc.rs
src-tauri/src/merge/: compatibility.rs  concat.rs  mod.rs  normalize.rs
src-tauri/src/scanner/: metadata.rs  mod.rs
src-tauri/src/scheduler/: limits.rs  mod.rs  queue.rs  state.rs
src-tauri/src/security/: auth.rs  mod.rs
src-tauri/src/sidecar/: ffmpeg.rs  mediamtx.rs  mod.rs
src-tauri/src/stream/: command.rs  mod.rs  supervisor.rs
src-tauri/src/telemetry/: gpu.rs  mod.rs  system.rs
src/components/: capacity-dashboard.tsx  create-stream-modal.tsx  error-display.tsx  glass-showcase.tsx  media-tree.tsx  merge-preview.tsx  onboarding.tsx  stream-card.tsx  url-copier.tsx
src/hooks/: use-api.ts  use-performance-optimization.ts  (+1 more)
(+31 files in other folders)
